--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
     "@types/node": "^12.20.4",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "d3": "^6.5.0",
+    "node-sass": "^5.0.0",
+    "numeral": "^2.0.6",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.5.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
     "typescript": "^4.2.2",
@@ -39,5 +45,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/d3": "^6.3.0",
+    "@types/numeral": "^2.0.1"
   }
 }
